# model_optis_and_fixes

./: .gitconfig  .gitignore  ChangeLog.md  CreditLinks.md  Credits.md  Description.md  Images.md  Pictures.md  README.md  build.py  config.json  config.md  defines.py  fixes list.md  gen.py  pack.mcmeta  pack.py  private_autogen.py  private_data.py  private_gen.py  pyrightconfig.json  remove_prefix.py
Assets/3D Default/: Credits of Extra variant 3D Default.md  pack.mcmeta
Assets/Base/: pack.mcmeta
Assets/Extra/3D/: Credits of Extra.3D.md
Assets/Extra/3D Redstone Dust/: Credits of Extra variant 3D Redstone Dust.md
Assets/Packs/: pack.mcmeta
Assets/Tweak 3D/: Credits of Tweak 3D.md
Assets/Tweak Shadeless Lights/: gen.py
Assets2/: ChangeLog.md  model.json  pack.mcmeta
Assets2/3d/: Credits.md
Assets2/base/: pack.mcmeta
Assets2/tweaks/: Credits of tweaks.md  Credits.md
NotInclude Assets/: correct_inside.json  model.json  test.json
Pack/Model O&F/: ChangeLog.md  README.md  pack.mcmeta
Pack/Model O&F Lite/: ChangeLog.md  README.md  pack.mcmeta
Pack/Resource Fixes/: pack.mcmeta
Pack/Resource Fixes Extra/: Credits.md  pack.mcmeta
Pack/Resource Fixes Lite/: pack.mcmeta
Pack/Resource Fixes Textured/: pack.mcmeta
assets/respackopts/: conf.json
mc-pack-builder/: .rustfmt.toml  Cargo.toml
mc-pack-builder/src/: args_x.rs  main.rs  merge.rs  path.rs
mc-pack-builder/src/text/: about.txt  help.txt
src/: rpo_config.json  rpo_gen.py
src/Base/: LICENSE.1  pack.mcmeta
src/Custom/: cmd.txt  config.json
src/Packs/: pack.mcmeta
(+2904 files in other folders)
