[package]
name = "mcpb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = {version="0.4.42",features = ["serde"]}
clap = { version = "4.5.48", features = ["derive"] }
dashmap = "6.1.0"
fern = "0.7.1"
flate2 = "1.1.2"
glob = "0.3.3"
json-patch = "4.1.0"
log = "0.4.28"
merge = "0.2.0"
pyo3 = "0.26.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
zip = "5.1.1"
